turtleart.lessons.turtleart.Main.DiskTwo.scala.error
Source:6: error: type mismatch;
 found   : Double(27.33333)
 required: Int
		for (j <- 1 to 27.33333)
                               ^