turtleart.lessons.turtleart.Main.DiskTwo.scala.code
override def run() {

for (i <- 1 to 9)
	{	setCouleur(Color.black)
		for (j <- 1 to 27.33333)
			{avance(100)
			recule(100)
			droite(0.75)}
		setCouleur(Color.red)
		for (j <- 1 to 20)
			{avance(100)
			recule(100)
			droite(1)}
		}
}
